# opengender

./: README.md  pyproject.toml
code/opengender/: dame_sexmachine.py  dame_utils.py  main.py  paths.py
code/tests/: test_dame_gender.py  test_dame_utils.py
data/: model.pkl
notebooks/: example.ipynb
opengender/: __init__.py  build.py  dame_gender.py  dame_sexmachine.py  dame_utils.py  dataset.py  main.py  metrics.py  model.py  paths.py  train.py  utils.py
tests/: test_dame_gender.py  test_dame_sexmachine.py  test_dame_utils.py  test_metrics.py  test_model.py  test_utils.py
