[tool.poetry]
name = "opengender"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.1.3"
Unidecode = "^1.3.6"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipython = "^8.6.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
datasets = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
